--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prism-editor",
+  "name": "code-oss-dev",
   "version": "1.99.3",
   "distro": "21c8d8ea1e46d97c5639a7cabda6c0e063cc8dd5",
   "author": {
@@ -10,25 +10,17 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "clean": "rimraf dist out release build",
-    "package": "npm run compile && electron-builder",
-    "package:win": "npm run compile && electron-builder --win",
-    "package:mac": "npm run compile && electron-builder --mac",
-    "package:linux": "npm run compile && electron-builder --linux",
-    "build": "npm run clean && npm run compile",
     "buildreact": "cd ./src/vs/workbench/contrib/void/browser/react/ && node build.js && cd ../../../../../../../",
     "watchreact": "cd ./src/vs/workbench/contrib/void/browser/react/ && node build.js --watch && cd ../../../../../../../",
     "watchreactd": "deemon npm run watchreact",
-    "test": "node scripts/test.js",
-    "test-integration": "node scripts/test-integration.js",
+    "test": "echo Please run any of the test scripts from the scripts folder.",
     "test-browser": "npx playwright install && node test/unit/browser/index.js",
     "test-browser-no-install": "node test/unit/browser/index.js",
     "test-node": "mocha test/unit/node/index.js --delay --ui=tdd --timeout=5000 --exit",
     "test-extension": "vscode-test",
     "preinstall": "node build/npm/preinstall.js",
     "postinstall": "node build/npm/postinstall.js",
-    "compile": "gulp compile-build",
-    "compile-web": "npx gulp compile-web",
+    "compile": "node ./node_modules/gulp/bin/gulp.js compile",
     "watch": "npm-run-all -lp watch-client watch-extensions",
     "watchd": "deemon npm run watch",
     "watch-webd": "deemon npm run watch-web",
@@ -36,14 +28,14 @@
     "kill-watch-webd": "deemon --kill npm run watch-web",
     "restart-watchd": "deemon --restart npm run watch",
     "restart-watch-webd": "deemon --restart npm run watch-web",
-    "watch-client": "npx gulp watch-client",
+    "watch-client": "node --max-old-space-size=8192 ./node_modules/gulp/bin/gulp.js watch-client",
     "watch-clientd": "deemon npm run watch-client",
     "kill-watch-clientd": "deemon --kill npm run watch-client",
-    "watch-extensions": "npx gulp watch-extensions",
+    "watch-extensions": "node --max-old-space-size=8192 ./node_modules/gulp/bin/gulp.js watch-extensions watch-extension-media",
     "watch-extensionsd": "deemon npm run watch-extensions",
     "kill-watch-extensionsd": "deemon --kill npm run watch-extensions",
     "precommit": "node build/hygiene.js",
-    "gulp": "gulp",
+    "gulp": "node --max-old-space-size=8192 ./node_modules/gulp/bin/gulp.js",
     "electron": "node build/lib/electron",
     "7z": "7z",
     "update-grammars": "node build/npm/update-all-grammars.mjs",
@@ -60,6 +52,13 @@
     "update-distro": "node build/npm/update-distro.mjs",
     "web": "echo 'npm run web' is replaced by './scripts/code-server' or './scripts/code-web'",
     "compile-cli": "gulp compile-cli",
+    "compile-web": "node ./node_modules/gulp/bin/gulp.js compile-web",
+    "watch-web": "node ./node_modules/gulp/bin/gulp.js watch-web",
+    "watch-cli": "node ./node_modules/gulp/bin/gulp.js watch-cli",
+    "eslint": "node build/eslint",
+    "stylelint": "node build/stylelint",
+    "playwright-install": "npm exec playwright install",
+    "compile-build": "node ./node_modules/gulp/bin/gulp.js compile-build-with-mangling",
     "compile-extensions-build": "node ./node_modules/gulp/bin/gulp.js compile-extensions-build",
     "minify-vscode": "node ./node_modules/gulp/bin/gulp.js minify-vscode",
     "minify-vscode-reh": "node ./node_modules/gulp/bin/gulp.js minify-vscode-reh",
@@ -70,8 +69,7 @@
     "extensions-ci": "node ./node_modules/gulp/bin/gulp.js extensions-ci",
     "extensions-ci-pr": "node ./node_modules/gulp/bin/gulp.js extensions-ci-pr",
     "perf": "node scripts/code-perf.js",
-    "update-build-ts-version": "npm install typescript@next && tsc -p ./build/tsconfig.build.json",
-    "rebuild": "electron-rebuild -f -w native-keymap"
+    "update-build-ts-version": "npm install typescript@next && tsc -p ./build/tsconfig.build.json"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.40.0",
@@ -175,10 +173,6 @@
     "@vscode/v8-heap-parser": "^0.1.0",
     "@vscode/vscode-perf": "^0.0.19",
     "@webgpu/types": "^0.1.44",
-    "electron": "^27.0.0",
-    "electron-builder": "^24.9.1",
-    "electron-rebuild": "^3.2.9",
-    "rimraf": "^5.0.0",
     "ansi-colors": "^3.2.3",
     "asar": "^3.0.3",
     "chromium-pickle-js": "^0.2.0",
@@ -188,6 +182,7 @@
     "cssnano": "^6.0.3",
     "debounce": "^1.0.0",
     "deemon": "^1.8.0",
+    "electron": "34.3.2",
     "eslint": "^9.11.1",
     "eslint-formatter-compact": "^8.40.0",
     "eslint-plugin-header": "3.1.1",
@@ -197,7 +192,7 @@
     "fancy-log": "^1.3.3",
     "file-loader": "^6.2.0",
     "glob": "^5.0.13",
-    "gulp": "^4.0.2",
+    "gulp": "^4.0.0",
     "gulp-azure-storage": "^0.12.1",
     "gulp-bom": "^3.0.0",
     "gulp-buffer": "0.0.2",
@@ -251,7 +246,7 @@
     "tsec": "0.2.7",
     "tslib": "^2.6.3",
     "tsup": "^8.4.0",
-    "typescript": "^5.3.3",
+    "typescript": "^5.8.0-dev.20250207",
     "typescript-eslint": "^8.8.0",
     "util": "^0.12.4",
     "webpack": "^5.94.0",
@@ -262,17 +257,16 @@
   },
   "overrides": {
     "node-gyp-build": "4.8.1",
-    "@vscode/ripgrep": "^1.15.11",
     "kerberos@2.1.1": {
       "node-addon-api": "7.1.0"
     }
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/microsoft/vscode.git  "
+    "url": "https://github.com/microsoft/vscode.git"
   },
   "bugs": {
-    "url": "https://github.com/microsoft/vscode/issues  "
+    "url": "https://github.com/microsoft/vscode/issues"
   },
   "optionalDependencies": {
     "windows-foreground-love": "0.5.0"
